<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:id="@+id/activity_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:text="@string/login_text_explain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/activity_login_id_text"
        style="@style/SpecialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:text="@string/login_ask_login_username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/activity_login_id"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:paddingLeft="8dip"
       	android:paddingRight="8dip"
        android:inputType="textPersonName"
        android:maxLength="8"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/activity_login_pass_text"
        style="@style/SpecialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/login_ask_login_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/activity_login_pass"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:paddingLeft="8dip"
       	android:paddingRight="8dip"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/activity_login_capcha_text"
        style="@style/SpecialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/login_ask_login_captcha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/activity_login_capcha_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/no_image_style"
            android:contentDescription="@string/login_captcha_description"
            android:src="@drawable/no_captcha" />

        <EditText
            android:id="@+id/activity_login_capcha"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:paddingLeft="8dip"
       		android:paddingRight="8dip"
            android:background="@drawable/border_edit_text"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_login_enter_button"
        style="@style/MyButtonStyle"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/my_button"
        android:text="@string/button_enter" />

</LinearLayout>