<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:id="@+id/captcha_title"
        style="@style/SpecialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_ask_login_captcha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/captcha_image"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/no_image_style"
            android:contentDescription="@string/login_captcha_description"
            android:src="@drawable/no_captcha" />

        <EditText
            android:id="@+id/captcha_text"
            style="@style/EditTextStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="8dip"
       		android:paddingRight="8dip"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/captcha_enter"
            style="@style/MyButtonStyle"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/button_accept" />

        <Button
            android:id="@+id/captcha_close"
            style="@style/MyButtonStyle"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/button_deny" />
    </LinearLayout>

</LinearLayout>