<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:id="@+id/dialog_password_title"
        style="@style/SpecialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/grades_ask_for_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/dialog_password_text"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:paddingLeft="8dip"
       	android:paddingRight="8dip"
        android:inputType="textPassword"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_password_enter"
            style="@style/MyButtonStyle"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/button_accept" />

        <Button
            android:id="@+id/dialog_password_close"
            style="@style/MyButtonStyle"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/button_deny" />
    </LinearLayout>

</LinearLayout>