<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:id="@+id/dialog_lesson_edit_title"
        style="@style/SpecialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="right"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/dialog_lesson_edit_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/dialog_lesson_edit_name"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/border_edit_text"
            android:ems="10"
            android:paddingLeft="8dip"
       		android:paddingRight="8dip"
            android:gravity="right" >
        </EditText>

        <TextView
            android:id="@+id/dialog_lesson_edit_name_text"
            style="@style/SpecialText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lesson_edit_name"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/dialog_lesson_edit_place"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:paddingLeft="8dip"
       		android:paddingRight="8dip"
            android:gravity="right" >
        </EditText>

        <TextView
            android:id="@+id/dialog_lesson_edit_place_text"
            style="@style/SpecialText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lesson_edit_place"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_lesson_edit_enter"
            style="@style/MyButtonStyle"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/button_save"/>

        <Button
            android:id="@+id/dialog_lesson_edit_close"
            style="@style/MyButtonStyle"
            android:layout_width="0px"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/button_cancel"/>
    </LinearLayout>

</LinearLayout>